[gd_scene load_steps=38 format=3 uid="uid://10bhfa4hhapk"]

[ext_resource type="Script" path="res://scene/scripts/CombatScene5.gd" id="1_00itw"]
[ext_resource type="Resource" uid="uid://p5pkvw56g0wj" path="res://script/EnemyNormal.tres" id="2_s6uw1"]
[ext_resource type="Texture2D" uid="uid://br28oq7odyull" path="res://Player/Pejuang.png" id="4_wl55l"]
[ext_resource type="Texture2D" uid="uid://cq3wnjcbytobe" path="res://Player/Enemy.png" id="5_l6x4r"]
[ext_resource type="FontFile" uid="uid://jc05yg18thbh" path="res://scene/scripts/Retro Gaming.ttf" id="7_7hvp8"]
[ext_resource type="AudioStream" uid="uid://b0y77h2ywhu7u" path="res://World/music/Slash.mp3" id="7_r5nfh"]
[ext_resource type="Texture2D" uid="uid://cbj64r3nojk43" path="res://World/Road.png" id="8_6dc6c"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ba5ah"]
bg_color = Color(0.791346, 0, 0.120508, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 1)
border_blend = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_51q04"]
bg_color = Color(0.133485, 0.686829, 0, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 1)
border_blend = true

[sub_resource type="AtlasTexture" id="AtlasTexture_ftikn"]
atlas = ExtResource("4_wl55l")
region = Rect2(0, 154, 77, 77)

[sub_resource type="AtlasTexture" id="AtlasTexture_byt26"]
atlas = ExtResource("4_wl55l")
region = Rect2(77, 154, 77, 77)

[sub_resource type="AtlasTexture" id="AtlasTexture_3llfa"]
atlas = ExtResource("4_wl55l")
region = Rect2(154, 154, 77, 77)

[sub_resource type="AtlasTexture" id="AtlasTexture_70cxn"]
atlas = ExtResource("4_wl55l")
region = Rect2(231, 154, 77, 77)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ctkp"]
atlas = ExtResource("4_wl55l")
region = Rect2(308, 154, 77, 77)

[sub_resource type="AtlasTexture" id="AtlasTexture_s1b18"]
atlas = ExtResource("4_wl55l")
region = Rect2(385, 154, 77, 77)

[sub_resource type="AtlasTexture" id="AtlasTexture_d0u4v"]
atlas = ExtResource("4_wl55l")
region = Rect2(462, 154, 77, 77)

[sub_resource type="AtlasTexture" id="AtlasTexture_s2txv"]
atlas = ExtResource("4_wl55l")
region = Rect2(539, 154, 77, 77)

[sub_resource type="SpriteFrames" id="SpriteFrames_6p2ms"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ftikn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_byt26")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3llfa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_70cxn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ctkp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s1b18")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d0u4v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s2txv")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_5dewg"]
atlas = ExtResource("5_l6x4r")
region = Rect2(539, 77, 77, 77)

[sub_resource type="AtlasTexture" id="AtlasTexture_6gfha"]
atlas = ExtResource("5_l6x4r")
region = Rect2(462, 77, 77, 77)

[sub_resource type="AtlasTexture" id="AtlasTexture_dosik"]
atlas = ExtResource("5_l6x4r")
region = Rect2(385, 77, 77, 77)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ur71"]
atlas = ExtResource("5_l6x4r")
region = Rect2(308, 77, 77, 77)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ce8w"]
atlas = ExtResource("5_l6x4r")
region = Rect2(231, 77, 77, 77)

[sub_resource type="AtlasTexture" id="AtlasTexture_fgf38"]
atlas = ExtResource("5_l6x4r")
region = Rect2(154, 77, 77, 77)

[sub_resource type="AtlasTexture" id="AtlasTexture_5k2wm"]
atlas = ExtResource("5_l6x4r")
region = Rect2(77, 77, 77, 77)

[sub_resource type="AtlasTexture" id="AtlasTexture_x0032"]
atlas = ExtResource("5_l6x4r")
region = Rect2(0, 77, 77, 77)

[sub_resource type="SpriteFrames" id="SpriteFrames_8lu7o"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5dewg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6gfha")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dosik")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ur71")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ce8w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fgf38")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5k2wm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x0032")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cmvqe"]
bg_color = Color(0.0768358, 0.0768358, 0.0768358, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 4
border_width_bottom = 3

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jvgt0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pm5un"]
bg_color = Color(0.0768358, 0.0768358, 0.0768358, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6t67g"]
draw_center = false

[sub_resource type="Animation" id="Animation_a63rh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Enemy/AnimatedSprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Player/AnimatedSprite2D:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-10, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Enemy/AnimatedSprite2D:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Enemy2/AnimatedSprite2D:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Enemy3/AnimatedSprite2D:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_nu21f"]
resource_name = "enemy2fall"

[sub_resource type="Animation" id="Animation_hmjlb"]
resource_name = "enemyfall"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/path = NodePath("Enemy/AnimatedSprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Enemy/AnimatedSprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.5708]
}

[sub_resource type="Animation" id="Animation_khyba"]
resource_name = "glow"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Enemy/AnimatedSprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.356863), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Enemy2/AnimatedSprite2D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.168627), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Enemy3/AnimatedSprite2D:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.176471), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_dw6au"]
resource_name = "shake"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player/AnimatedSprite2D:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 0.287175),
"update": 0,
"values": [Vector2(0, 0), Vector2(10, 0), Vector2(-10, 0), Vector2(10, 0), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1vx5f"]
_data = {
"RESET": SubResource("Animation_a63rh"),
"enemy2fall": SubResource("Animation_nu21f"),
"enemyfall": SubResource("Animation_hmjlb"),
"glow": SubResource("Animation_khyba"),
"shake": SubResource("Animation_dw6au")
}

[node name="CombatScene5" type="Node"]
script = ExtResource("1_00itw")
enemy1 = ExtResource("2_s6uw1")
enemy2 = ExtResource("2_s6uw1")
enemy3 = ExtResource("2_s6uw1")

[node name="Player" type="CharacterBody2D" parent="."]
position = Vector2(209, 298)
scale = Vector2(1.5, 1.5)

[node name="ProgressBar" type="ProgressBar" parent="Player"]
offset_left = -52.0
offset_top = 17.3333
offset_right = 48.0
offset_bottom = 27.3333
theme_override_styles/background = SubResource("StyleBoxFlat_ba5ah")
theme_override_styles/fill = SubResource("StyleBoxFlat_51q04")
max_value = 150.0
value = 50.0
show_percentage = false

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Player"]
position = Vector2(-3.33333, -52)
scale = Vector2(1.70346, 1.70346)
sprite_frames = SubResource("SpriteFrames_6p2ms")
frame_progress = 0.567397
offset = Vector2(-10, 0)

[node name="Enemy" type="CharacterBody2D" parent="."]
position = Vector2(830, 318)
scale = Vector2(1.5, 1.5)
metadata/_edit_group_ = true

[node name="ProgressBar" type="ProgressBar" parent="Enemy"]
offset_left = -53.3333
offset_top = 58.0001
offset_right = 46.6667
offset_bottom = 87.0001
theme_override_styles/background = SubResource("StyleBoxFlat_ba5ah")
theme_override_styles/fill = SubResource("StyleBoxFlat_51q04")
value = 50.0

[node name="Enemy1" type="Button" parent="Enemy"]
modulate = Color(1, 1, 1, 0.00392157)
offset_left = -28.0
offset_top = -37.0
offset_right = 17.0
offset_bottom = 46.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Enemy"]
position = Vector2(-6.66668, 0.666657)
scale = Vector2(1.52164, 1.56583)
sprite_frames = SubResource("SpriteFrames_8lu7o")
animation = &"idle"
frame_progress = 0.364778

[node name="Enemy2" type="CharacterBody2D" parent="."]
position = Vector2(1009, 223)
scale = Vector2(1.5, 1.5)
metadata/_edit_group_ = true

[node name="ProgressBar" type="ProgressBar" parent="Enemy2"]
offset_left = -53.3333
offset_top = 58.0001
offset_right = 46.6667
offset_bottom = 87.0001
theme_override_styles/background = SubResource("StyleBoxFlat_ba5ah")
theme_override_styles/fill = SubResource("StyleBoxFlat_51q04")
value = 50.0

[node name="Enemy2" type="Button" parent="Enemy2"]
modulate = Color(1, 1, 1, 0.00392157)
offset_left = -28.0
offset_top = -37.0
offset_right = 17.0
offset_bottom = 46.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Enemy2"]
position = Vector2(-6.66668, 0.666657)
scale = Vector2(1.52164, 1.56583)
sprite_frames = SubResource("SpriteFrames_8lu7o")
animation = &"idle"
frame_progress = 0.364778

[node name="Enemy3" type="CharacterBody2D" parent="."]
position = Vector2(826, 97)
scale = Vector2(1.5, 1.5)
metadata/_edit_group_ = true

[node name="ProgressBar" type="ProgressBar" parent="Enemy3"]
offset_left = -53.3333
offset_top = 58.0001
offset_right = 46.6667
offset_bottom = 87.0001
theme_override_styles/background = SubResource("StyleBoxFlat_ba5ah")
theme_override_styles/fill = SubResource("StyleBoxFlat_51q04")
value = 50.0

[node name="Enemy3" type="Button" parent="Enemy3"]
modulate = Color(1, 1, 1, 0.00392157)
offset_left = -28.0
offset_top = -37.0
offset_right = 17.0
offset_bottom = 46.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Enemy3"]
position = Vector2(-6.66668, 0.666657)
scale = Vector2(1.52164, 1.56583)
sprite_frames = SubResource("SpriteFrames_8lu7o")
animation = &"idle"
frame_progress = 0.364778

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -101.0
offset_right = -788.0
grow_horizontal = 2
grow_vertical = 0

[node name="Attack" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("7_7hvp8")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_cmvqe")
theme_override_styles/focus = SubResource("StyleBoxEmpty_jvgt0")
text = "Attack
"

[node name="Defend" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("7_7hvp8")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_cmvqe")
theme_override_styles/focus = SubResource("StyleBoxEmpty_jvgt0")
text = "Defend"

[node name="Run" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("7_7hvp8")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_cmvqe")
theme_override_styles/focus = SubResource("StyleBoxEmpty_jvgt0")
text = "Run"

[node name="TextBoxPanel" type="Panel" parent="."]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 366.0
offset_top = -146.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_pm5un")

[node name="Text" type="Label" parent="TextBoxPanel"]
layout_mode = 2
offset_left = 20.0
offset_top = 19.0
offset_right = 782.0
offset_bottom = 130.0
theme_override_fonts/font = ExtResource("7_7hvp8")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_6t67g")
text = "AWiawjiawjijwaiwakidiwaiawkdiwkaidwaidjwaijdksajdiwajdkas"
autowrap_mode = 3
text_direction = 1

[node name="Road" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(789, 226)
scale = Vector2(1.28125, 1.28125)
texture = ExtResource("8_6dc6c")
metadata/_edit_lock_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_1vx5f")
}

[node name="Slash" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_r5nfh")
volume_db = -19.447

[node name="Slash2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_r5nfh")
volume_db = -19.447
pitch_scale = 0.42

[connection signal="pressed" from="Enemy/Enemy1" to="." method="_on_enemy_1_pressed"]
[connection signal="pressed" from="Enemy2/Enemy2" to="." method="_on_enemy_2_pressed"]
[connection signal="pressed" from="Enemy3/Enemy3" to="." method="_on_enemy_3_pressed"]
[connection signal="pressed" from="VBoxContainer/Attack" to="." method="_on_attack_pressed"]
[connection signal="pressed" from="VBoxContainer/Defend" to="." method="_on_defend_pressed"]
